# geoguessr-model

./: .gitignore  README.md  clear_model_cache.sh  main.py  pyproject.toml  requirements.txt  run.sh
model/: MODEL.md  MODEL_DIFFUSION.md  cells.py  config.py  dataset.py  index.py  model.py  preprocess.py  preview.py  train.py
scripts/: download_data.py
